--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	</div>
 </footer>
 
-<script src="./assets/script.js"></script>
+<script src="./assets/script.js" defer></script>
 
 </body>
 </html>
